# volumefractal

./: .gitignore  CMakeLists.txt  FFT_benchmark_asus_laptop.qti  README.md  build.sh  fastfouriertransform3d.cpp  fastfouriertransform3d.h  fft3daverage.pro  fft3ddata.cpp  fft3ddata.h  iqcustomplot.cpp  main.cpp  mainwindow.cpp  mainwindow.h  options.cpp  options.h  plot-script.gp  processing.cpp  processing.h
average/: CMakeLists.txt  average.cpp  average.h  main.cpp
doc/: README.org
fft3d/: .gitignore  CMakeLists.txt  README.md  fastfouriertransform3d.cpp  fastfouriertransform3d.h  fft3ddata.cpp  fft3ddata.h  main.cpp  options.cpp  options.h
fft3daverage/: .gitignore  fft3daverage.pro  iqcustomplot.cpp  iqcustomplot.h  main.cpp  mainwindow.cpp  mainwindow.h  processing.cpp  processing.h
generate/: .gitignore  CMakeLists.txt  fractals.cpp  fractals.h  main.cpp  primitives.cpp  primitives.h
include/: fastfouriertransform3d.h  fft3ddata.h  options.h
qfft3daverage/: .gitignore  CMakeLists.txt  fft3daverage.pro  iqcustomplot.cpp  iqcustomplot.h  main.cpp  mainwindow.cpp  mainwindow.h  processing.cpp  processing.h
qviewer/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  qviewer.pro
